# systematic-review

./: .gitignore  LICENSE  README.md  pyproject.toml  testing.ipynb
collection/: process.py  search.py
collection/examples/processed/: definitions1.grobid.tei.xml  definitions2.grobid.tei.xml  definitions3.grobid.tei.xml  fake1.grobid.tei.xml  fake2.grobid.tei.xml  fake3.grobid.tei.xml  lakes1.grobid.tei.xml  lakes2.grobid.tei.xml  lakes3.grobid.tei.xml  ponds1.grobid.tei.xml  ponds2.grobid.tei.xml  ponds3.grobid.tei.xml
examples/: embedding.ipynb  results.ipynb  search.ipynb  testing.ipynb
experiments/: model.py  pond.py  pond_cpp.py  ponds.py  test.py
experiments/data/: pond_screening2.csv  pond_screening3.csv  test_history.csv
extraction/: 1  extract.py  extract2.py  model.py  pond_extract.py  pond_model.py  ponds.py
extraction/data/: pond_screening.csv  pond_screening2.csv  pond_screening3.csv  pond_screening4.csv  pond_screening5.csv  pond_screening_olmo_ollama.csv  pond_screening_test.csv
extraction/data/coastal/: screening.csv  screening2.csv  screening3.csv  screening4.csv  screening_100.csv  screening_100_2.csv  screening_100_3.csv  screening_1k.csv
extraction/data/pond/: pond_screening2.csv  pond_screening3.csv  screening_examples_gemma.csv  screening_examples_gemma_custom.csv  screening_examples_olmo.csv  screening_gemma_ollama.csv
older/: pond_cpp.py  testing.ipynb
papers/: process.py
papers/processed/: definitions1.grobid.tei.xml  definitions2.grobid.tei.xml  definitions3.grobid.tei.xml  fake1.grobid.tei.xml  fake3.grobid.tei.xml  lakes2.grobid.tei.xml  ponds1.grobid.tei.xml
src/coastal_rag/: documents.py
src/systematic_review/: __init__.py  chat.py  document.py  utils.py
