[project]
name = "coastal-rag"
version = "0.1.0"
description = "RAG for coastal ecosystems data."
authors = [
    {name = "Kevin Quinn"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-text-splitters (>=0.3.7,<0.4.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langgraph (>=0.3.19,<0.4.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "langchain-ollama (>=0.3.0,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
